# rtrg_mini_sprite_batch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
Application/: Animation.cpp  Animation.hpp  CMakeLists.txt  Color.hpp  Common.hpp  ContentManager.cpp  ContentManager.hpp  Effect.cpp  Effect.hpp  Game.cpp  Game.hpp  ImGui.hpp  ImGuiConfig.hpp  MapImporter.cpp  MapImporter.hpp  RenderContext.cpp  RenderContext.hpp  RenderResources.hpp  SampleGame.cpp  SampleGame.hpp  SpriteBatch.cpp  SpriteBatch.hpp  main.cpp
Assets/Maps/: mainlev_build_c1.tsj  test_for_engine_export.json
Assets/Shaders/: DefaultSpriteBatch.frag  DefaultSpriteBatch.vert  FullscreenBlit.frag  FullscreenBlit.vert  NonDefaultSpriteBatch.frag  NonDefaultSpriteBatch.vert
